# mit-quant-finance

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
Continuous Time Finance/: Monte_Carlo_Pricing.R  Praciting_Monte_Carlo_pricer.R  europen_options_pricer_mc.ipynb
Stochastic Processes/Monte Carlo Simulations/: Simple_Simulations.R  Simple_simulation.ipynb  price_return_process.R  price_return_process.ipynb
Stochastic Processes/Random Walk/: Testing_the_Random_Walk.Rmd  Testing_the_Random_Walk.ipynb  Testing_the_Random_Walk.nb.html
Time Series Models/: Model_Specification_and_Estimation.Rmd  Model_Specification_and_Estimation.nb.html  Model_Specification_and_Estimation_TSMC.ipynb
linear_algebra/Equal_weighted_portfolios/: Equal_Weighted_Portfolios.Rmd  Two_Asset_Portfolio.ipynb
notes/: Lecture_2.Rproj
notes/lecture_2/: Lecture_2.R  Lecture_2.ipynb  Script_SP500.Rmd
probability/Central_Limit_Theorem/: Central_Limit_Theorem.R  Central_Limit_Theorem.ipynb
