[project]
name = "mit-quant-finance"
version = "0.1.0"
description = "Dependencies for these notes"
authors = [
    {name = "Fernando Corcuera",email = "188613791+FerCorcuera@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pykernel (>=0.1.6,<0.2.0)"
]
